--- a/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
+++ b/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
@@ -109,8 +109,8 @@
         >
         </bo-select>
         <form-date-range
-          [fieldLabelFrom]="'COMMON.VALID_FROM'"
-          [fieldLabelTo]="'COMMON.VALID_TO'"
+          [labelFrom]="'COMMON.VALID_FROM'"
+          [labelUntil]="'COMMON.VALID_TO'"
           [formGroup]="form"
         ></form-date-range>
       </form>
