--- a/frontend/src/app/pages/ttfn/detail/timetable-field-number-detail.component.html
+++ b/frontend/src/app/pages/ttfn/detail/timetable-field-number-detail.component.html
@@ -58,8 +58,8 @@
     <span class="font-bold-2xl">{{ 'FORM.KEY_DATA' | translate }}</span>
     <div class="w-50">
       <form-date-range
-        [fieldLabelFrom]="'COMMON.VALID_FROM'"
-        [fieldLabelTo]="'COMMON.VALID_TO'"
+        [labelFrom]="'COMMON.VALID_FROM'"
+        [labelUntil]="'COMMON.VALID_TO'"
         [formGroup]="form"
       ></form-date-range>
     </div>
