--- a/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
+++ b/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
@@ -97,8 +97,8 @@
 
   <div class="w-50">
     <form-date-range
-      [fieldLabelFrom]="'COMMON.VALID_FROM'"
-      [fieldLabelTo]="'COMMON.VALID_TO'"
+      [labelFrom]="'COMMON.VALID_FROM'"
+      [labelUntil]="'COMMON.VALID_TO'"
       [formGroup]="form"
     ></form-date-range>
   </div>
