ATLAS-1012: Changes according to PR comments.

--- a/frontend/src/app/core/components/tthdialog/tthdialog.component.html
+++ b/frontend/src/app/core/components/tthdialog/tthdialog.component.html
@@ -36,7 +36,7 @@
         [infoIconTitleFrom]="'TTH.DIALOG.HEARING_FROM_INFO'"
         [infoIconTitleUntil]="'TTH.DIALOG.HEARING_UNTIL_INFO'"
         [required]="false"
-        [setDatumExamples]="true"
+        [setDateExamples]="true"
         [labelFromExample]="'TTH.DIALOG.HEARING_FROM_EXAMPLE'"
         [labelFrom]="'TTH.DIALOG.HEARING_FROM'"
         [labelUntilExample]="'TTH.DIALOG.HEARING_UNTIL_EXAMPLE'"
