--- a/frontend/src/app/core/form-components/date-range/date-range.component.html
+++ b/frontend/src/app/core/form-components/date-range/date-range.component.html
@@ -3,7 +3,7 @@
     <app-atlas-label-field
       [fieldExamples]="[
         { label: 'FORM.FOR_EXAMPLE', translate: true },
-        { label: setDatumExamples ? labelFromExample : EXAMPLE_DATE_FROM, translate: false }
+        { label: setDateExamples ? labelFromExample : EXAMPLE_DATE_FROM, translate: false }
       ]"
       [required]="required"
       [fieldLabel]="labelFrom"
@@ -31,7 +31,7 @@
     <app-atlas-label-field
       [fieldExamples]="[
         { label: 'FORM.FOR_EXAMPLE', translate: true },
-        { label: setDatumExamples ? labelUntilExample : EXAMPLE_DATE_TO, translate: false }
+        { label: setDateExamples ? labelUntilExample : EXAMPLE_DATE_TO, translate: false }
       ]"
       [required]="required"
       [fieldLabel]="labelUntil"
