--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -69,10 +69,10 @@
         <atlas-button
           (buttonClicked)="manageTimetableHearing()"
           [disabled]="isCheckBoxModeActive"
-          applicationType="LIDI"
+          applicationType="TIMETABLE_HEARING"
           buttonDataCy="manageTimetableHearing"
           buttonText="TTH.BUTTON.MANAGE_TIMETABLE_HEARING"
-          buttonType="createCheckingPermission"
+          buttonType="manageTimetableHearing"
           wrapperStyleClass="text-align-end"
         >
         </atlas-button>
