ATLAS-1012: Add changes according to PR comments.

--- a/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
+++ b/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
@@ -109,9 +109,10 @@
         >
         </bo-select>
         <form-date-range
-          [labelFrom]="'COMMON.VALID_FROM'"
-          [labelUntil]="'COMMON.VALID_TO'"
+          labelFrom="COMMON.VALID_FROM"
+          labelUntil="COMMON.VALID_TO"
           [formGroup]="form"
+          class="col-6"
         ></form-date-range>
       </form>
     </app-relation>
