--- a/frontend/src/app/pages/bodi/business-organisations/detail/business-organisation-detail.component.html
+++ b/frontend/src/app/pages/bodi/business-organisations/detail/business-organisation-detail.component.html
@@ -158,8 +158,8 @@
     <span class="font-bold-2xl">{{ 'FORM.KEY_DATA' | translate }}</span>
     <div class="w-50">
       <form-date-range
-        [labelFrom]="'COMMON.VALID_FROM'"
-        [labelUntil]="'COMMON.VALID_TO'"
+        labelFrom="COMMON.VALID_FROM"
+        labelUntil="COMMON.VALID_TO"
         [formGroup]="form"
       ></form-date-range>
     </div>
