--- a/frontend/src/app/pages/tth/timetable-hearing-dialog/timetable-hearing-dialog.component.html
+++ b/frontend/src/app/pages/tth/timetable-hearing-dialog/timetable-hearing-dialog.component.html
@@ -33,14 +33,14 @@
 
     <div>
       <form-date-range
-        [infoIconTitleFrom]="'TTH.DIALOG.HEARING_FROM_INFO'"
-        [infoIconTitleUntil]="'TTH.DIALOG.HEARING_UNTIL_INFO'"
+        infoIconTitleFrom="TTH.DIALOG.HEARING_FROM_INFO"
+        infoIconTitleUntil="TTH.DIALOG.HEARING_UNTIL_INFO"
         [required]="false"
         [setDateExamples]="true"
-        [labelFromExample]="'TTH.DIALOG.HEARING_FROM_EXAMPLE'"
-        [labelFrom]="'TTH.DIALOG.HEARING_FROM'"
-        [labelUntilExample]="'TTH.DIALOG.HEARING_UNTIL_EXAMPLE'"
-        [labelUntil]="'TTH.DIALOG.HEARING_UNTIL'"
+        labelFromExample="TTH.DIALOG.HEARING_FROM_EXAMPLE"
+        labelFrom="TTH.DIALOG.HEARING_FROM"
+        labelUntilExample="TTH.DIALOG.HEARING_UNTIL_EXAMPLE"
+        labelUntil="TTH.DIALOG.HEARING_UNTIL"
         [formGroup]="form"
         class="col-6"
       ></form-date-range>
