--- a/frontend/src/app/pages/tth/new-timetable-hearing-year-dialog/new-timetable-hearing-year-dialog.component.html
+++ b/frontend/src/app/pages/tth/new-timetable-hearing-year-dialog/new-timetable-hearing-year-dialog.component.html
@@ -9,11 +9,13 @@
 
     <div class="d-flex flex-column col-6 pe-3">
       <app-atlas-label-field
-        [fieldExamples]="[{ label: 'TTH.DIALOG.PLAN_DROPDOWN_DESCRIPTION', translate: true }]"
+        [fieldExamples]="[
+          { label: 'TTH.NEW_YEAR.DIALOG.PLAN_DROPDOWN_DESCRIPTION', translate: true }
+        ]"
         [formGroup]="form"
         controlName="timetableYear"
-        fieldLabel="TTH.DIALOG.PLAN_DROPDOWN_TITLE"
-        infoIconTitle="TTH.DIALOG.PLAN_INFO"
+        fieldLabel="TTH.NEW_YEAR.DIALOG.PLAN_DROPDOWN_TITLE"
+        infoIconTitle="TTH.NEW_YEAR.DIALOG.PLAN_INFO"
       >
       </app-atlas-label-field>
     </div>
@@ -33,14 +35,14 @@
 
     <div>
       <form-date-range
-        infoIconTitleFrom="TTH.DIALOG.HEARING_FROM_INFO"
-        infoIconTitleUntil="TTH.DIALOG.HEARING_UNTIL_INFO"
+        infoIconTitleFrom="TTH.NEW_YEAR.DIALOG.HEARING_FROM_INFO"
+        infoIconTitleUntil="TTH.NEW_YEAR.DIALOG.HEARING_UNTIL_INFO"
         [required]="false"
         [setDateExamples]="true"
-        labelFromExample="TTH.DIALOG.HEARING_FROM_EXAMPLE"
-        labelFrom="TTH.DIALOG.HEARING_FROM"
-        labelUntilExample="TTH.DIALOG.HEARING_UNTIL_EXAMPLE"
-        labelUntil="TTH.DIALOG.HEARING_UNTIL"
+        labelFromExample="TTH.NEW_YEAR.DIALOG.HEARING_FROM_EXAMPLE"
+        labelFrom="TTH.NEW_YEAR.DIALOG.HEARING_FROM"
+        labelUntilExample="TTH.NEW_YEAR.DIALOG.HEARING_UNTIL_EXAMPLE"
+        labelUntil="TTH.NEW_YEAR.DIALOG.HEARING_UNTIL"
         [formGroup]="form"
         class="col-6"
       ></form-date-range>
@@ -55,7 +57,7 @@
         class="atlas-primary-btn primary-color-btn"
         data-cy="dialog-confirm-button"
       >
-        {{ data.confirmText ?? 'TTH.DIALOG.SAVE' | translate }}
+        {{ data.confirmText ?? 'TTH.NEW_YEAR.DIALOG.SAVE' | translate }}
       </button>
     </mat-dialog-actions>
   </div>
