--- a/frontend/src/app/pages/tth/overview-detail/tth-change-status-dialog/tth-change-status-dialog.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/tth-change-status-dialog/tth-change-status-dialog.component.html
@@ -9,7 +9,9 @@
     <div class="mb-2">
       <br />
     </div>
-    <span class="font-regular-lg message">{{ data.message | translate }}</span>
+    <span class="font-regular-lg message">{{
+      data.message | translate : { actualStatus: data.ths.statementStatus }
+    }}</span>
   </div>
   <div class="pt-2 pb-5 justification">
     <form-comment
