ATLAS-1014: make detail navigation based on hearingStatus

--- a/frontend/src/app/pages/tth/overview-detail/tth-change-status-dialog/tth-change-status-dialog.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/tth-change-status-dialog/tth-change-status-dialog.component.html
@@ -15,9 +15,9 @@
   </div>
   <div class="pt-2 pb-5 justification">
     <form-comment
-      [controlName]="'justification'"
       [formGroup]="tthChangeStatusFormGroup"
-      [label]="'TTH.DIALOG.COMMENT_LABEL'"
+      controlName="justification"
+      label="TTH.DIALOG.COMMENT_LABEL"
       maxChars="5000"
     ></form-comment>
   </div>
