--- a/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
+++ b/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
@@ -108,12 +108,7 @@
           valueExtraction=""
         >
         </bo-select>
-        <form-date-range
-          labelFrom="COMMON.VALID_FROM"
-          labelUntil="COMMON.VALID_TO"
-          [formGroup]="form"
-          class="col-6"
-        ></form-date-range>
+        <form-date-range [formGroup]="form" class="col-6"></form-date-range>
       </form>
     </app-relation>
   </div>
