--- a/frontend/src/app/pages/tth/new-timetable-hearing-year-dialog/new-timetable-hearing-year-dialog.component.html
+++ b/frontend/src/app/pages/tth/new-timetable-hearing-year-dialog/new-timetable-hearing-year-dialog.component.html
@@ -5,7 +5,7 @@
     </button>
   </div>
   <div class="dialog" data-cy="dialog">
-    <h1 class="font-bold-4xl">{{ data.title | translate }}</h1>
+    <h1 class="font-bold-4xl">{{ 'TTH.NEW_YEAR.DIALOG.NEW_PLAN_TIMETABLE' | translate }}</h1>
 
     <div class="d-flex flex-column col-6 pe-3">
       <app-atlas-label-field
