--- a/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
+++ b/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
@@ -117,11 +117,7 @@
 
     <span class="font-bold-2xl">{{ 'FORM.KEY_DATA' | translate }}</span>
     <div class="w-50">
-      <form-date-range
-        labelFrom="COMMON.VALID_FROM"
-        labelUntil="COMMON.VALID_TO"
-        [formGroup]="form"
-      ></form-date-range>
+      <form-date-range [formGroup]="form"></form-date-range>
     </div>
 
     <div class="col-12 d-flex pt-3 pb-3">
