ATLAS-1168: do the joel styling

--- a/frontend/src/app/core/form-components/select/select.component.html
+++ b/frontend/src/app/core/form-components/select/select.component.html
@@ -4,27 +4,26 @@
   </mat-label>
   <atlas-spacer *ngIf="label" height="3px"></atlas-spacer>
   <atlas-spacer *ngIf="additionalLabelspace" height="30px"></atlas-spacer>
-  <div class="multi-select-search">
-    <mat-select
-      (selectionChange)="selectChanged.emit($event)"
-      [formControlName]="controlName"
-      [attr.data-cy]="dataCy"
-      placeholder="{{ 'FORM.DROPDOWN_PLACEHOLDER' | translate }}"
-      [multiple]="multiple"
-    >
-      <mat-option *ngFor="let option of options" [value]="valueExtractor(option)">
-        <ng-container
-          *ngTemplateOutlet="matOptionPrefix; context: getAsObject(option)"
-        ></ng-container>
-        <ng-template [ngIf]="optionTranslateLabelPrefix" [ngIfElse]="rawOption">
-          {{ optionTranslateLabelPrefix + displayExtractor(option) | translate }}
-        </ng-template>
-        <ng-template #rawOption>
-          {{ displayExtractor(option) }}
-        </ng-template>
-      </mat-option>
-    </mat-select>
-  </div>
+  <mat-select
+    class="atlas-mat-select-wrapper"
+    (selectionChange)="selectChanged.emit($event)"
+    [formControlName]="controlName"
+    [attr.data-cy]="dataCy"
+    placeholder="{{ 'FORM.DROPDOWN_PLACEHOLDER' | translate }}"
+    [multiple]="multiple"
+  >
+    <mat-option *ngFor="let option of options" [value]="valueExtractor(option)">
+      <ng-container
+        *ngTemplateOutlet="matOptionPrefix; context: getAsObject(option)"
+      ></ng-container>
+      <ng-template [ngIf]="optionTranslateLabelPrefix" [ngIfElse]="rawOption">
+        {{ optionTranslateLabelPrefix + displayExtractor(option) | translate }}
+      </ng-template>
+      <ng-template #rawOption>
+        {{ displayExtractor(option) }}
+      </ng-template>
+    </mat-option>
+  </mat-select>
   <app-atlas-field-error
     *ngIf="formGroup"
     [form]="formGroup"
