--- a/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
+++ b/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
@@ -143,7 +143,7 @@
         </atlas-select>
       </div>
 
-      <div class="d-flex flex-column col-3 space-right">
+      <div class="d-flex flex-column col-3">
         <atlas-select
           [formGroup]="form"
           controlName="paymentType"
