ATLAS-1012: WIP refactoring according to PR comments.

--- a/frontend/src/app/pages/tth/new-timetable-hearing-year-dialog/new-timetable-hearing-year-dialog.component.html
+++ b/frontend/src/app/pages/tth/new-timetable-hearing-year-dialog/new-timetable-hearing-year-dialog.component.html
@@ -20,7 +20,11 @@
     </div>
 
     <div class="multi-select-search">
-      <mat-select formControlName="timetableYear" [(value)]="defaultYearSelection">
+      <mat-select
+        data-cy="timetableYear"
+        formControlName="timetableYear"
+        [(value)]="defaultYearSelection"
+      >
         <mat-option *ngFor="let year of YEAR_OPTIONS" [value]="year">
           {{ year }}
         </mat-option>
@@ -29,6 +33,8 @@
 
     <div>
       <form-date-range
+        controlNameFrom="hearingFrom"
+        controlNameTo="hearingTo"
         infoIconTitleFrom="TTH.NEW_YEAR.DIALOG.HEARING_FROM_INFO"
         infoIconTitleUntil="TTH.NEW_YEAR.DIALOG.HEARING_UNTIL_INFO"
         [required]="false"
