--- a/frontend/src/app/core/form-components/date-range/date-range.component.html
+++ b/frontend/src/app/core/form-components/date-range/date-range.component.html
@@ -14,18 +14,21 @@
         [matDatepicker]="validFromPicker!"
         [max]="MAX_DATE"
         [min]="MIN_DATE"
-        data-cy="validFrom"
-        formControlName="validFrom"
+        [attr.data-cy]="controlNameFrom"
+        [formControlName]="controlNameFrom"
         required
       />
       <mat-datepicker-toggle [for]="validFromPicker">
         <mat-icon matDatepickerToggleIcon>
-          <form-date-icon [enabled]="formGroup.controls.validFrom.enabled"></form-date-icon>
+          <form-date-icon [enabled]="controlFrom.enabled"></form-date-icon>
         </mat-icon>
       </mat-datepicker-toggle>
       <mat-datepicker #validFromPicker></mat-datepicker>
     </div>
-    <app-atlas-field-error [form]="formGroup" controlName="validFrom"></app-atlas-field-error>
+    <app-atlas-field-error
+      [form]="formGroup"
+      [controlName]="controlNameFrom"
+    ></app-atlas-field-error>
   </div>
   <div class="d-flex flex-column col-6 pe-3">
     <app-atlas-label-field
@@ -42,17 +45,17 @@
         [matDatepicker]="validToPicker!"
         [max]="MAX_DATE"
         [min]="MIN_DATE"
-        data-cy="validTo"
-        formControlName="validTo"
+        [attr.data-cy]="controlNameTo"
+        [formControlName]="controlNameTo"
         required
       />
       <mat-datepicker-toggle [for]="validToPicker">
         <mat-icon matDatepickerToggleIcon>
-          <form-date-icon [enabled]="formGroup.controls.validTo.enabled"></form-date-icon>
+          <form-date-icon [enabled]="controlTo.enabled"></form-date-icon>
         </mat-icon>
       </mat-datepicker-toggle>
       <mat-datepicker #validToPicker></mat-datepicker>
     </div>
-    <app-atlas-field-error [form]="formGroup" controlName="validTo"></app-atlas-field-error>
+    <app-atlas-field-error [form]="formGroup" [controlName]="controlNameTo"></app-atlas-field-error>
   </div>
 </div>
